some changes after rubric